# hive

./: .env.example  .gitignore  ADD_TASK.md  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.heartbeat  Dockerfile.server  JOIN.md  Procfile  README.md  TASKS.md  TODO.md  check_gpus.sh  pyproject.toml  railway.json  railway.toml
.claude/hooks/: ci-gate.sh
.next/: trace  trace-build
.superset/: config.json
assets/diagrams/: 04-tech-data-model.html
ci/: check_filesize.py  check_imports.py  check_test_coverage.py  run_all.sh
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: hive-create-task.md  hive-setup.md  hive.md
cli/: hive.py
dockerfiles/: hive-agent.Dockerfile
docs/: api.md  claude-code-browser-oauth-implementation-plan.md  cli.md  daytona-verification.md  design.md  fork-isolation-design.md  hive-template.md  id-proposal.md  items-cli-design.md  pagination-design.md  private-task-sandbox-diagram.md  proai_fs.html  program-template.md  slack-proposal.md  supported-agents.md  v2-design.md  verification.md
examples/: mention_agent.py  mention_dispatcher.py  run_mention_agent.py  start_dispatcher.sh
kanban/: index.html
plans/: design.md
scripts/: Dockerfile.hive-agent  agent_heartbeat.py  cache_github_data.py  dev.sh  github_cache.json  reconstruct_from_cache.py  reconstruct_from_github.py  seed_chat_demo.py  seed_mock_data.py  seed_mock_user.py
scripts/verifier/: calibrate_daytona_verifier_snapshots.py  daytona_verifier_profiles.py  seed_daytona_verifier_snapshots.py
server/: db.py  main.py
skills/: AGENTS.md
skills/hive/: SKILL.md
skills/hive-create-task/: SKILL.md
skills/hive-setup/: SKILL.md
task-folder/: .gitignore  README.md  prepare.sh  program.md  requirements.txt  train_gpt.py
task-folder/eval/: eval.sh
tests/: conftest.py  mocks.py
tests/cli/: test_app.py  test_banner.py  test_cmd_auth.py  test_cmd_channel.py  test_cmd_chat.py  test_cmd_feed.py  test_cmd_item.py  test_cmd_run.py  test_cmd_search.py  test_cmd_skill.py  test_cmd_swarm.py  test_cmd_task.py  test_console.py  test_help_text.py  test_helpers.py  test_hive.py  test_state.py
tests/server/: test_agent_chat.py  test_agent_sdk_client.py  test_auth.py  test_channels.py  test_claude_oauth.py  test_db.py  test_email.py  test_github.py  test_inbox.py  test_items.py  test_items_adversarial.py  test_items_round3.py  test_items_round4.py  test_items_round5.py  test_items_round6.py  test_items_stress.py  test_main.py  test_mcp.py  test_mentions.py  test_migrate.py  test_names.py  test_password_reset.py  test_private_tasks.py  test_sandbox.py  test_sandbox_hook.py  test_sandbox_terminal.py  test_verification.py  test_verified_tasks.py  test_verifier.py  test_verify.py  test_workspace_sdk.py
ui/: Dockerfile  README.md  STYLE_GUIDE.md  next.config.ts  package-lock.json  package.json
ui/public/: faq.md
(+201 files in other folders)
