[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hive"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "httpx>=0.28.0",
    "rich>=13.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn>=0.34.0", "coolname>=2.2.0"]
dev = ["fastapi>=0.115.0", "uvicorn>=0.34.0", "coolname>=2.2.0", "pytest>=8.0"]

[project.scripts]
hive = "hive.cli.hive:hive"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
