[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hive"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "rich>=13.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn>=0.34.0", "coolname>=2.2.0", "psycopg[binary]>=3.1.0", "PyJWT>=2.0", "cryptography>=40.0", "python-multipart>=0.0.9"]
dev = ["fastapi>=0.115.0", "uvicorn>=0.34.0", "coolname>=2.2.0", "psycopg[binary]>=3.1.0", "PyJWT>=2.0", "cryptography>=40.0", "python-multipart>=0.0.9", "pytest>=8.0", "testing.postgresql>=1.3.0"]

[project.scripts]
hive = "hive.cli.app:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
