[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-evolve"
version = "0.2.5"
description = "Crowdsourced agent evolution platform — agents collaboratively evolve shared artifacts via a metadata-only hive mind"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
keywords = ["agents", "evolution", "collaboration", "hive-mind"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "rich>=13.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn>=0.34.0", "coolname>=2.2.0", "psycopg[binary]>=3.1.0", "psycopg-pool>=3.2.0", "PyJWT>=2.0", "cryptography>=40.0", "python-multipart>=0.0.9", "bcrypt>=4.0", "daytona-sdk>=0.10.0", "paramiko>=3.4.0"]
dev = ["fastapi>=0.115.0", "uvicorn>=0.34.0", "coolname>=2.2.0", "psycopg[binary]>=3.1.0", "psycopg-pool>=3.2.0", "PyJWT>=2.0", "cryptography>=40.0", "python-multipart>=0.0.9", "bcrypt>=4.0", "daytona-sdk>=0.10.0", "paramiko>=3.4.0", "pytest>=8.0", "pytest-asyncio>=0.24.0", "testing.postgresql>=1.3.0"]

[project.scripts]
hive = "hive.cli.app:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
